# GGUF-Model-Compiler

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/suraj/ggufmodelrunner/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama-android.cpp
app/src/main/java/com/suraj/ggufmodelrunner/: MainActivity.kt
app/src/main/java/com/suraj/ggufmodelrunner/data/: ChatRepository.kt  LlamaBridge.kt
app/src/main/java/com/suraj/ggufmodelrunner/ui/: ChatScreen.kt  ChatViewModel.kt
app/src/main/java/com/suraj/ggufmodelrunner/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/suraj/ggufmodelrunner/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
